Add,Refresh & Update buttons

--- a/style.css
+++ b/style.css
@@ -14,3 +14,13 @@ table .btnedit{
 	cursor: pointer;
 
 }
+
+.success{
+	background-color: lightgreen;
+	padding: 1em;
+}
+
+.error{
+	background-color: tomato;
+	padding: 1em;
+}
