--- a/style.css
+++ b/style.css
@@ -24,3 +24,50 @@ table .btnedit{
 	background-color: tomato;
 	padding: 1em;
 }
+
+/*.popup .overlay{
+	position: fixed;
+	top: 0px;
+	left: 0px;
+	width: 100vw;
+	height: 100vh;
+	background:rgb(0,0,0);
+	z-index: 1;
+	display: none;
+}
+.popup .content{
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%,-50%);
+	background: #fff;
+	width: auto;
+	height: auto;
+	z-index: 2;
+	text-align: center;
+	padding: 20px;
+	box-sizing: border-box;
+}
+.popup.active .overlay{
+	display: block;
+}
+.popup.active .content{
+	transition: all 300ms ease-in-out;
+	transform: translate(-50%,-50%)scale(1);
+}
+.popup .close-btn{
+	cursor: pointer;
+	position: absolute;
+	right: 20px;
+	top: 20px;
+	width: 30px;
+	height: 30px;
+	background: #222;
+	color: #ffffff;
+	font-size: 25px;
+	font-weight: 600;
+	line-height: 30px;
+	text-align: center;
+	border-radius: 50%;
+}
+*/
